apps/traefik/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: http
  hostnames:
    - grafana.golden-horde.ir
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
