apps/traefik/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-argocd
  hostnames:
    - argocd.golden-horde.ir
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
