apps/traefik/prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: http
  hostnames:
    - prometheus.golden-horde.ir
  rules:
    - backendRefs:
        - name: prometheus
          port: 9090
